# hass-tesla-ble

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  config.json  hacs.json  plan.md  pyproject.toml
.kilocode/rules/: specify-rules.md
.specify/memory/: constitution.md
custom_components/tesla_ble/: __init__.py  binary_sensor.py  ble_client.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  lock.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/tesla_ble/core/: ble_interface.py  crypto.py  models.py  protocol.py  session_manager.py
custom_components/tesla_ble/core/proto/: car_server_pb2.py  car_server_pb2.pyi  common_pb2.py  common_pb2.pyi  errors_pb2.py  keys_pb2.py  keys_pb2.pyi  managed_charging_pb2.py  signatures_pb2.py  universal_message_pb2.py  vcsec_pb2.py  vcsec_pb2.pyi  vehicle_pb2.py  vehicle_pb2.pyi
custom_components/tesla_ble/translations/: en.json
proto/: Makefile
references/: yalexs_homeassistant_bt_reference_implementation.txt  yoziru-esphome-tesla-ble-8a5edab282632443.txt  yoziru-tesla-ble-8a5edab282632443.txt
references/pedro/: pedroktfc-esphome-tesla-ble-8a5edab282632443.txt  tesla-ble-library-reference.txt
scripts/: gen_proto.py
specs/001-improve-tesla-ble-proxy/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-improve-tesla-ble-proxy/checklists/: implementation.md  requirements.md
specs/001-improve-tesla-ble-proxy/contracts/: interfaces.md
specs/001-improve-tesla-entities/: spec.md  tasks.md
specs/001-improve-tesla-entities/checklists/: requirements.md
src/: bluetooth.rs  config.rs  main.rs  mqtt.rs  proto.rs
src/proto/: car_server.rs  errors.rs  keys.rs  managed_charging.rs  signatures.rs  universal_message.rs  vcsec.rs
src/proto/google/protobuf/: timestamp.rs
tests/: test_crypto.py
