[package]
name = "hass-tesla-ble"
version = "0.1.0"
edition = "2021"
authors = ["Home Assistant Community"]
description = "Tesla BLE Local Control for Home Assistant"
license = "MIT"

[dependencies]
# Bluetooth Low Energy (BLE)
bluer = { version = "0.17", features = ["full"] }

# MQTT client
rumqttc = "0.24"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
ed25519-dalek = "2"
x25519-dalek = "2"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
config = "0.14"

[build-dependencies]
prost-build = "0.12"
