[project]
name = "hass-tesla-ble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "bleak>=2.1.0",
    "cryptography>=46.0.2",
    "homeassistant==2025.12.5",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "aiousbwatcher>=1.1.1",
    "grpcio-tools>=1.76.0",
    "pyserial>=3.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "custom_components/tesla_ble/core/proto/*_pb2.py",
    "custom_components/tesla_ble/core/proto/*_pb2.pyi",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["UP006", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = ["custom_components/tesla_ble/core/proto"]
